targets/srv0/k3s/ollama/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-openwebui-ollama-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ollama
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: open-webui
      ports:
        - port: 11434
  policyTypes:
    - Ingress
